--- a/source/sass/blocks/_modal.scss
+++ b/source/sass/blocks/_modal.scss
@@ -54,6 +54,10 @@
 .modal__body {
   font-size: 17px;
   padding: 20px;
+
+  @media (max-width: $mobile-width) {
+    font-size: 15px;
+  }
 }
 
 .modal__list {
