--- a/source/sass/blocks/_main-header.scss
+++ b/source/sass/blocks/_main-header.scss
@@ -21,6 +21,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media (max-width: $very-sm-width) {
+    min-height: auto;
+  }
 }
 
 .main-header__left {
