--- a/source/sass/blocks/_modal.scss
+++ b/source/sass/blocks/_modal.scss
@@ -7,6 +7,10 @@
   left: 50%;
   transform: translate3d(-50%, -50%, 0);
   background-color: white;
+
+  @media (max-width: $very-sm-width) {
+    max-width: 90vw;
+  }
 }
 
 .is-modal-open {
@@ -21,6 +25,10 @@
   max-height: 80vh;
   overflow-y: auto;
   border: 1px solid $second-text-color;
+
+  @media (max-width: $very-sm-width) {
+    margin: 10px;
+  }
 }
 
 .modal__header {
@@ -57,6 +65,7 @@
 
   @media (max-width: $mobile-width) {
     font-size: 15px;
+    padding: 0;
   }
 }
 
