--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -1,3 +1,17 @@
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0;  /* remove scrollbar space */
+  background: transparent;  /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+  background: #ff0000;
+}
+
 body {
   font-size: 14px;
   color: $first-text-color;
