--- a/source/sass/blocks/_modal.scss
+++ b/source/sass/blocks/_modal.scss
@@ -59,9 +59,15 @@
   color: $second-button-color;
 }
 
+.modal__photo {
+  object-fit: cover;
+  width: 100%;
+  height: auto;
+}
+
 .modal__body {
   font-size: 17px;
-  padding: 20px;
+  width: 100%;
 
   @media (max-width: $mobile-width) {
     font-size: 15px;
