--- a/source/sass/blocks/_buttons.scss
+++ b/source/sass/blocks/_buttons.scss
@@ -15,6 +15,10 @@
     opacity: 0.5;
   }
 
+  &--modal {
+    margin: 0 auto;
+  }
+
   @media (max-width: $very-sm-width) {
     margin: 10px auto;
   }
